--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ flutter:
         pluginClass: NativeLinkifyPlugin
       ios:
         pluginClass: NativeLinkifyPlugin
+      macos:
+        pluginClass: NativeLinkifyPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
